[package]
name = "remotemedia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core runtime library for RemoteMedia pipelines - transport-agnostic execution engine"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_core"
crate-type = ["rlib"]

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
schemars = { workspace = true }
inventory = { workspace = true }
jsonschema = { workspace = true }

# Proc-macros for NodeConfig
remotemedia-core-derive = { path = "../core-derive" }

# Async trait support
async-trait = { workspace = true }

# StreamingScheduler drift metrics (spec 026)
bitflags = { workspace = true }

# Audio processing (for native nodes)
rubato = { workspace = true }
rustfft = { workspace = true }
bytemuck = { workspace = true }
ort = { workspace = true, optional = true }
ndarray = { workspace = true }
# NPZ archive reader for the Audio2Face bundle. Optional — enabled by
# the `avatar-audio2face` feature.
zip = { workspace = true, optional = true }

# Avatar renderer (M4.4) — wgpu headless render-to-texture +
# texture decode + sync-wait helper + Cubism Core safe wrapper.
wgpu = { workspace = true, optional = true }
image = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
cubism-core = { path = "../cubism-core", optional = true }

base64 = "0.22"

# Speaker diarization (uses ONNX models) - using git for ort 2.x compatibility
pyannote-rs = { git = "https://github.com/thewh1teagle/pyannote-rs", optional = true }

# Video codec support (spec 012)
ac-ffmpeg = { version = "0.19", optional = true }

# llama.cpp bindings (GGUF inference, optional)
llama-cpp-4 = { workspace = true, optional = true, features = ["cuda"] }
# Direct access to llama-cpp-sys-4 is needed by the cuda_smoke_test example
# to enumerate ggml backend devices (llama-cpp-4 doesn't re-export the FFI).
llama-cpp-sys-4 = { version = "0.2", optional = true, features = ["cuda"] }
encoding_rs = { workspace = true, optional = true }
# Render the model's GGUF-embedded Jinja chat template ourselves so we
# can pass kwargs (e.g. `enable_thinking=false` for Qwen3). The simple
# `llama_chat_apply_template` C API doesn't accept template kwargs.
minijinja = { version = "2", optional = true, default-features = false, features = ["builtins", "loader", "macros", "multi_template", "loop_controls"] }
# `pycompat` adds Python-style string/list method emulation
# (`s.startswith(...)`, `s.endswith(...)`, etc.) which Qwen and most HF
# chat templates rely on.
minijinja-contrib = { version = "2", optional = true, default-features = false, features = ["pycompat"] }

# IPC for multiprocess
iceoryx2 = { workspace = true, optional = true }
iceoryx2-log = { workspace = true, optional = true }

# Note: Python wrapper nodes are in a separate crate (remotemedia-nodes-python).
# Users should add that crate as a dependency to get Python nodes.
# The inventory system will automatically register them when the crate is linked.

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bollard = { workspace = true }
hex.workspace = true
num_cpus.workspace = true
rand.workspace = true
glob.workspace = true
rusqlite.workspace = true
uuid.workspace = true
thiserror.workspace = true
bytes.workspace = true
tar.workspace = true
reqwest.workspace = true
chrono.workspace = true
regex.workspace = true
histogram = "0.11.3"
crossbeam.workspace = true
sha2.workspace = true
hdrhistogram.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
hyper = { workspace = true, features = ["full"] }
http-body-util = { version = "0.1", optional = true }

# Force vendored OpenSSL to avoid system version mismatch (OPENSSL_API_COMPAT error)
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# gRPC client (for remote pipeline nodes)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
url = { workspace = true }

# Low-latency streaming optimizations (spec 007)
# NOTE: These appear to be duplicated under the `[target.'cfg(windows)'.dependencies]`
# scope above due to a missing section header in the original file. The real
# declarations are in the main `[dependencies]` block near `histogram = ...`.
crossbeam = { workspace = true }
hdrhistogram = { workspace = true }

# Docker executor (spec 009)
bollard = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
# hyper and http-body-util are transitive deps from bollard, add them directly
hyper = { workspace = true, optional = true }
http-body-util = { version = "0.1", optional = true }
glob = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hound = { workspace = true }
anyhow = { workspace = true }
remotemedia-grpc = { path = "../transports/grpc" }
# Force-linked by integration tests that drive Python multiprocess
# nodes (e.g. KokoroTTSNode) through SessionRouter — pulls
# `inventory::submit!` registrations into the default streaming
# registry. Same shape as the qwen_s2s_webrtc_server.rs example.
remotemedia-python-nodes = { path = "../python-nodes" }
axum = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }

[features]
default = ["multiprocess", "silero-vad", "docker", "video"]
multiprocess = ["iceoryx2", "iceoryx2-log"]
silero-vad = ["ort"]
# Avatar pipeline (spec 2026-04-27): emoji-tag extraction from text streams
avatar-emotion = []
# Avatar lip-sync — `LipSyncNode` trait, `BlendshapeFrame` envelope, and a
# synthetic deterministic impl. Real Audio2Face ONNX impl is a follow-up
# (gated on AUDIO2FACE_TEST_ONNX env var when it lands).
avatar-lipsync = ["avatar-emotion"]
# Real Audio2Face ONNX inference path: pulls in `ort` for the
# Audio2Face-3D v3.0 network and `zip` for the persona-engine bundle's
# .npz archives. Tier-2 tests gate on AUDIO2FACE_TEST_BUNDLE pointing
# at the unpacked bundle; see scripts/install-audio2face.sh.
avatar-audio2face = ["avatar-lipsync", "ort", "dep:zip"]
# Avatar renderer state machine (input arbitration, emotion timing,
# idle blink, barge handling). Pure Rust, no GPU. The wgpu+CubismCore
# backend lands behind `avatar-render-wgpu` (M4.4).
avatar-render = ["avatar-lipsync"]
# Re-export `MockBackend` from `live2d_render::test_support` for use
# by integration tests (which can't see `cfg(test)` items).
avatar-render-test-support = ["avatar-render"]
# Real wgpu+CubismCore renderer backend. Pulls in wgpu, image (for
# texture decode), pollster (for blocking on async wgpu calls in
# the synchronous render path), and cubism-core (for the .moc3
# parser + post-deformer drawable accessors). M4.4 implements the
# basic Normal-blend ordered-draw path; mask passes + Additive +
# Multiplicative blend modes land in M4.4 follow-up commits.
avatar-render-wgpu = [
    "avatar-render",
    "dep:wgpu",
    "dep:image",
    "dep:pollster",
    "dep:cubism-core",
]
speaker-diarization = ["ort", "dep:pyannote-rs"]
grpc-client = ["tonic", "prost", "prost-types"]
# Docker support integrated into multiprocess system
docker = ["dep:bollard", "dep:tar", "dep:chrono", "dep:bytes", "dep:hyper", "dep:http-body-util", "dep:glob", "dep:rusqlite"]
# Video codec support (spec 012)
video = ["dep:ac-ffmpeg"]
# llama.cpp GGUF inference (generation, embeddings, activation extraction, steering)
llama-cpp = ["dep:llama-cpp-4", "dep:llama-cpp-sys-4", "dep:encoding_rs", "dep:minijinja", "dep:minijinja-contrib"]
# llama.cpp with CUDA GPU acceleration (implies llama-cpp for inventory registration)
llama-cpp-cuda = ["llama-cpp"]
# Managed Python environments via uv
bundled-uv = []
bundled-uv-embedded = ["bundled-uv"]
embedded-python = ["bundled-uv"]

# Note: To get Python nodes, add remotemedia-nodes-python as a dependency.
# The inventory system will auto-register the provider.

# NOTE: grpc-client is for RemotePipelineNode client functionality only
# Full transport implementations belong in separate transport crates

# Integration tests for low-latency streaming (spec 007)
[[test]]
name = "test_speculative_vad"
path = "tests/integration/test_speculative_vad.rs"

[[test]]
name = "test_speculative_vad_coordinator"
path = "tests/integration/test_speculative_vad_coordinator.rs"

[[test]]
name = "test_control_messages"
path = "tests/integration/test_control_messages.rs"

# Phase 0 + 1 real-time backpressure / probe / buffer-pool integration
[[test]]
name = "test_rt_backpressure"
path = "tests/integration/test_rt_backpressure.rs"

# Old Docker executor tests removed - use test_docker_multiprocess instead

# Integration test for basic Docker multiprocess execution (T021)
[[test]]
name = "test_docker_multiprocess"
path = "tests/integration/test_docker_multiprocess.rs"

# Comprehensive E2E test for Docker multiprocess integration
[[test]]
name = "test_docker_multiprocess_e2e"
path = "tests/integration/test_docker_multiprocess_e2e.rs"

# Test for Docker image building and caching (T031)
[[test]]
name = "test_docker_image_builder"
path = "tests/integration/test_docker_image_builder.rs"

# Test for Docker resource limit enforcement (T041)
[[test]]
name = "test_docker_resource_limits"
path = "tests/integration/test_docker_resource_limits.rs"

# Integration test for parameter validation (T025-T027)
[[test]]
name = "test_param_validation"
path = "tests/integration/test_param_validation.rs"

# Cross-transport validation consistency test (T034)
[[test]]
name = "test_transport_consistency"
path = "tests/integration/test_transport_consistency.rs"

# Benchmarks for latency measurement
[[bench]]
name = "bench_latency"
path = "benches/bench_latency.rs"
harness = false

[[bench]]
name = "bench_real_vad_comparison"
path = "benches/bench_real_vad_comparison.rs"
harness = false

[[bench]]
name = "bench_utterance_completion"
path = "benches/bench_utterance_completion.rs"
harness = false

[[bench]]
name = "bench_real_pipeline"
path = "benches/bench_real_pipeline.rs"
harness = false

[[bench]]
name = "bench_docker_latency"
path = "benches/bench_docker_latency.rs"
harness = false

[[bench]]
name = "docker_vs_multiprocess"
path = "benches/docker_vs_multiprocess.rs"
harness = false

[[bench]]
name = "docker_e2e_pipeline"
path = "benches/docker_e2e_pipeline.rs"
harness = false

[[bench]]
name = "docker_e2e_pipeline_simple"
path = "benches/docker_e2e_pipeline_simple.rs"
harness = false

[[bench]]
name = "docker_ipc_benchmark"
path = "benches/docker_ipc_benchmark.rs"
harness = false

[[bench]]
name = "bench_vad_docker_pipeline"
path = "benches/bench_vad_docker_pipeline.rs"
harness = false

[[bench]]
name = "bench_speculative_coordinator"
path = "benches/bench_speculative_coordinator.rs"
harness = false

[[bench]]
name = "bench_validation"
path = "benches/bench_validation.rs"
harness = false

# StreamingScheduler and DriftMetrics benchmarks (spec 026)
[[bench]]
name = "bench_streaming_scheduler"
path = "benches/bench_streaming_scheduler.rs"
harness = false

# Phase 0 / 1 real-time backpressure benchmarks
[[bench]]
name = "bench_rt_backpressure"
path = "benches/bench_rt_backpressure.rs"
harness = false

# End-to-end router probe harness: drives an N-node sync pipeline through
# the SessionRouter and prints probe distributions after each run.
[[bench]]
name = "bench_router_probes"
path = "benches/bench_router_probes.rs"
harness = false
