[package]
name = "remotemedia-hearing-nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hearing aid DSP nodes (WDRC, CROS, HRTF) for RemoteMedia pipelines"

[dependencies]
remotemedia-core = { path = "../core" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Hearing-aid DSP crates (sibling workspace on disk).
dsp-core = { path = "../../../Realtime_Competitive_Game_Audio/crates/dsp-core" }
audiogram = { path = "../../../Realtime_Competitive_Game_Audio/crates/audiogram" }
wdrc = { path = "../../../Realtime_Competitive_Game_Audio/crates/wdrc" }
cros = { path = "../../../Realtime_Competitive_Game_Audio/crates/cros" }
hrtf = { path = "../../../Realtime_Competitive_Game_Audio/crates/hrtf" }
hrtf-synth = { path = "../../../Realtime_Competitive_Game_Audio/crates/hrtf-synth", default-features = false }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "process_sync_rt"
harness = false
