[package]
name = "remotemedia-health-analyzer"
description = "Shared stream health analysis types and utilities for RemoteMedia SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync"] }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
