[package]
name = "remotemedia-ingest-srt"
description = "SRT ingest gateway for RemoteMedia SDK - listener mode for demo site"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ingest-srt"
path = "src/main.rs"

[dependencies]
# Core
remotemedia-runtime-core = { path = "../../runtime-core" }
remotemedia-health-analyzer = { path = "../../libs/stream-health-analyzer" }
remotemedia-ingest-rtmp = { path = "../../adapters/ingest-rtmp" }

# Async
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
futures = { workspace = true }

# SRT native support (for streamid access)
srt-tokio = "0.4"
bytes = { workspace = true }

# HTTP/API
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }

# SSE
async-stream = "0.3"

# JWT
jsonwebtoken = "9"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

# Config
toml = { workspace = true }

# FFmpeg bindings for MPEG-TS demuxing
ffmpeg-next = "7"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
