[package]
name = "remotemedia-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "FFI bindings for RemoteMedia pipelines (Python and Node.js)"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_ffi"
# When building with extension-module: cdylib only
# When building without: defaults to rlib
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core runtime (NO transport dependencies)
# Enable multiprocess for ChannelRegistry access from napi bindings
remotemedia-runtime-core = { path = "../../runtime-core", default-features = true, features = ["multiprocess"] }

# WebRTC transport (optional - enabled with webrtc feature)
remotemedia-webrtc = { path = "../webrtc", features = ["grpc-signaling"], optional = true }

# Python FFI (optional - enabled with python feature)
pyo3 = { version = "0.26", features = ["abi3-py310", "auto-initialize"], default-features = false, optional = true }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"], optional = true }
numpy = { version = "0.26", optional = true }

# Node.js FFI (optional - enabled with napi feature)
napi = { version = "2", features = ["napi6", "async", "tokio_rt"], optional = true }
napi-derive = { version = "2", optional = true }

# IPC (required for both Python and Node.js IPC)
iceoryx2 = { workspace = true }

# UUID for server/peer IDs (required for webrtc)
uuid = { version = "1.6", features = ["v4"], optional = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
base64 = "0.22"

[build-dependencies]
napi-build = { version = "2", optional = true }

[features]
default = ["python", "native-numpy"]
# Python bindings (PyO3)
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:numpy"]
extension-module = ["pyo3/extension-module", "python"]
native-numpy = ["python"]
# Node.js bindings (napi-rs)
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
# WebRTC core (shared types and signaling service wrapper)
webrtc = ["dep:remotemedia-webrtc", "dep:uuid"]
# Node.js WebRTC bindings (requires both napi and webrtc)
napi-webrtc = ["napi", "webrtc"]
# Python WebRTC bindings (requires both python and webrtc)
python-webrtc = ["python", "webrtc"]
