[package]
name = "remotemedia-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HTTP/REST transport with SSE streaming for RemoteMedia pipelines"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_http"
crate-type = ["rlib"]

[dependencies]
# Core runtime (NO transport dependencies)
remotemedia-runtime-core = { path = "../../runtime-core", default-features = true }

# HTTP client/server
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["tokio", "json", "http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
hyper = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true }
num_cpus = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }

[features]
# Default features: basic HTTP pipeline execution and streaming
default = ["server"]

# Server feature: includes dependencies needed to run http-server binary
server = ["num_cpus", "tracing-subscriber"]

[[bin]]
name = "http-server"
path = "bin/http-server.rs"
required-features = ["server"]
