[package]
name = "remotemedia-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "gRPC transport for RemoteMedia pipelines"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_grpc"
crate-type = ["rlib"]

[dependencies]
# Core runtime (NO transport dependencies)
remotemedia-runtime-core = { path = "../../runtime-core" }

# gRPC dependencies
tonic = { workspace = true }
tonic-web = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
prometheus = { workspace = true }

# Utilities
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }

[[bin]]
name = "grpc-server"
path = "bin/grpc-server.rs"
