[package]
name = "remotemedia-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "gRPC transport for RemoteMedia pipelines"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_grpc"
crate-type = ["rlib"]

[dependencies]
# Core runtime (NO transport dependencies)
remotemedia-runtime-core = { path = "../../runtime-core", default-features = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-web = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
ctrlc = { version = "3.4", optional = true }  # Only needed for server binary
num_cpus = { version = "1.16", optional = true }  # Only needed for server binary
chrono.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
# Default features: basic gRPC pipeline execution and streaming
default = ["server"]

# Server feature: includes dependencies needed to run grpc-server binary
server = ["ctrlc", "num_cpus"]

[[bin]]
name = "grpc-server"
path = "bin/grpc-server.rs"
required-features = ["server"]
